--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~12.2.0",
     "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.1",
+    "chart.js": "^2.9.4",
     "jquery": "^3.6.0",
+    "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
